--- a/qml.qrc
+++ b/qml.qrc
@@ -1,28 +1,15 @@
 <RCC>
     <qresource prefix="/">
-        <file>plugins.qrc</file>
-        <file>settings.json</file>
-        <file>assets/left.svg</file>
-        <file>assets/right.svg</file>
-        <file>qml/Main.qml</file>
-        <file>qml/js/Utils.js</file>
-
-        <file>qml/components/CustomButton.qml</file>
-        <file>qml/components/DatePicker.qml</file>
-        <file>qml/components/JSONListModel.qml</file>
-        <file>qml/components/EmptyList.qml</file>
-        <file>qml/components/FloatingButton.qml</file>
-        <file>qml/components/ListItem.qml</file>
-        <file>qml/components/Menu.qml</file>
-        <file>qml/components/RoundedImage.qml</file>
-        <file>qml/components/Snackbar.qml</file>
-        <file>qml/components/Toast.qml</file>
-        <file>qml/components/ToolBar/CustomToolBar.qml</file>
-        <file>qml/components/ToolBar/CustomToolButton.qml</file>
-        <file>qml/components/ToolBar/SearchToolbar.qml</file>
-        <file>qml/components/AwesomeIcon/Awesome.js</file>
-        <file>qml/components/AwesomeIcon/FontAwesome.otf</file>
-        <file>qml/components/AwesomeIcon/AwesomeIcon.qml</file>
-        <file>qml/components/BasePage.qml</file>
+        <file>main.qml</file>
+        <file>Page1.qml</file>
+        <file>Page1Form.ui.qml</file>
+        <file>JSONListModel.qml</file>
+        <file>jsonpath.js</file>
+        <file>matriz-curricular.json</file>
+	<file>AwesomeIcon/Awesome.js</file>
+	<file>AwesomeIcon/AwesomeIcon.qml</file>
+	<file>AwesomeIcon/FontAwesome.otf</file>
+	<file>Images/green-circle1.png</file>
+	<file>Images/green-circle-void.png</file>
     </qresource>
 </RCC>
